change image link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing = "20">
         <tr>
             <td>
-                <img src="../images/steven-profile.jpg" alt = "Steven Profile Picture" width="150">
+                <img src="images/steven-profile.jpg" alt = "Steven Profile Picture" width="150">
             </td>
             <td>
                 <h1><a href="https://www.linkedin.com/in/stevenliu1/">Steven Liu</a></h1>
